// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render MobileNavigationLink component with external link 1`] = `
<li
  className="MobileNavigationLink"
>
  <a
    className="MobileNavigationLink__link"
    href="https://www.google.com"
    onClick={[Function]}
    rel="noopener"
    target="_blank"
  >
    External link
  </a>
</li>
`;

exports[`Render MobileNavigationLink component with external link with sublink 1`] = `
<li
  className="MobileNavigationLink"
>
  <a
    className="MobileNavigationLink__link"
    href="https://www.google.com"
    onClick={[Function]}
    rel="noopener"
    target="_blank"
  >
    External link with sublink
  </a>
  <button
    className="MobileNavigationLink__sublink_button"
    data-active={false}
    onClick={[Function]}
  >
    ▼
  </button>
  <ul
    className="MobileNavigationLink__sublink_list"
    data-active={false}
    onClick={[Function]}
  >
    <li
      className="MobileNavigationLink__sublink"
      key="External sublink"
    >
      <a
        className="MobileNavigationLink__sublink_link"
        href="https://www.google.com"
        onClick={[Function]}
      >
        External sublink
      </a>
    </li>
  </ul>
</li>
`;

exports[`Render MobileNavigationLink component with internal link 1`] = `
<li
  className="MobileNavigationLink"
>
  <ForwardRef
    className="MobileNavigationLink__link"
    onClick={[Function]}
    to="/"
  >
    Internal link
  </ForwardRef>
</li>
`;

exports[`Render MobileNavigationLink component with internal link and sublink 1`] = `
<li
  className="MobileNavigationLink"
>
  <ForwardRef
    className="MobileNavigationLink__link"
    onClick={[Function]}
    to="/"
  >
    Internal link with sublink
  </ForwardRef>
  <button
    className="MobileNavigationLink__sublink_button"
    data-active={false}
    onClick={[Function]}
  >
    ▼
  </button>
  <ul
    className="MobileNavigationLink__sublink_list"
    data-active={false}
    onClick={[Function]}
  >
    <li
      className="MobileNavigationLink__sublink"
      key="Internal sublink"
    >
      <ForwardRef
        className="MobileNavigationLink__sublink_link"
        onClick={[Function]}
        to="/"
      >
        Internal sublink
      </ForwardRef>
    </li>
  </ul>
</li>
`;

exports[`Render MobileNavigationLink component without links 1`] = `
<li
  className="MobileNavigationLink"
>
  <a
    className="MobileNavigationLink__link"
    onClick={[Function]}
    rel="noopener"
    target="_blank"
  />
</li>
`;
